--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,11 @@
   <!--link favicons in all formats (exept .ico) for maximum backward compatibility-->
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
-  <!--load Bootstrap css code trough CDN-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="container-fluid p-3 m-0" id="root"></div>
+  <div id="root"></div>
 </body>
 
 </html>
