--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <!--SEO-->
@@ -13,8 +13,8 @@
 </head>
 
 <body>
+  <div id="wordify"></div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
 </body>
 
 </html>
