--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!--SEO-->
-  <title>Wordify</title>
+  <title>Flow</title>
   <meta lang="en">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="wordify"></div>
+  <div id="editor"></div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
 </body>
 
