--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <!--link favicons in all formats (exept .ico) for maximum backward compatibility-->
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
+
+  <link rel="stylesheet" href="%PUBLIC_URL%/default.css" media="print">
+  <link rel="stylesheet" href="%PUBLIC_URL%/water.css" media="screen">
 </head>
 
 <body>
