--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,11 @@
   <!--link favicons in all formats (exept .ico) for maximum backward compatibility-->
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
-
-  <link rel="stylesheet" href="%PUBLIC_URL%/default.css" media="print">
-  <link rel="stylesheet" href="%PUBLIC_URL%/water.css" media="screen">
 </head>
 
 <body>
   <div id="editor"></div>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run the editor.</noscript>
 </body>
 
 </html>
