removed react-bootstrap dep and fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   <body>
     <div class="min-vh-100" id="app"></div>
     <script src="./app.js"></script>
+    <noscript
+      >This app makes extensive use of javascript please enable it in order to
+      use the app.</noscript
+    >
   </body>
 </html>
