--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="min-vh-100" id="app"></div>
+    <div id="app"></div>
     <script src="./app.js"></script>
     <noscript
       >This app makes extensive use of javascript please enable it in order to
