--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!--SEO-->
     <title>Flow</title>
     <meta lang="en" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#fd7e14" />
+    <meta
+      name="description"
+      content="A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities."
+    />
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
