--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
       name="description"
       content="A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities."
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Quicksand"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code"
+    />
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
 
   <body>
     <div id="app"></div>
-    <script src="./app.js"></script>
+    <script src="./index.js"></script>
     <noscript
       >This app makes extensive use of javascript please enable it in order to
       use the app.</noscript
