--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="./index.js"></script>
     <noscript
       >This app makes extensive use of javascript please enable it in order to
