--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta lang="en" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#fd7e14" />
+    <meta name="theme-color" content="#007bff" />
     <meta
       name="description"
       content="A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities."
